[package]
name = "polyhedron_game_server"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
[profile.dev]
panic = "abort"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }
